# questions_to_cards

./: .gitignore  README.md  pyproject.toml
questions_to_cards/: backup_to_cards.py  dynamic_threshes.py  interface.py  packet_to_cards.py  similarity.py  text_processing.py  utility.py
